--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,50 @@
-body {
+/* body {
   background-color: blue;
+} */
+
+.card-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  perspective: 1000px;
+}
+
+.card {
+  position: relative;
+  width: 10rem;
+  height: 10rem;
+  margin: 10px;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  transition: transform 400ms ease-in-out;
+}
+
+.card-front,
+.caed-back {
+  backface-visibility: hidden;
+}
+
+.card-front {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+}
+
+.card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(-180deg);
+  background-color: peru;
+}
+
+.card:hover {
+  transform: rotateY(180deg);
 }
