feat: add JS card flip, begin correct/incorrect flip logic

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/* body {
-  background-color: blue;
-} */
-
 .card-wrapper {
   display: flex;
   justify-content: space-evenly;
@@ -45,6 +41,6 @@
   background-color: peru;
 }
 
-.card:hover {
+.flip-card {
   transform: rotateY(180deg);
 }
