--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ header {
   margin: 0 auto 2rem;
   perspective: 1000px;
   transition: opacity 300ms 600ms;
-  box-shadow: inset 1px 1px 15px rgba(0, 182, 131, .5);
+  box-shadow: inset 1px 1px 15px rgba(0, 182, 131, .4);
 }
 
 .card {
@@ -82,7 +82,7 @@ header {
   margin: 10px;
   transform-style: preserve-3d;
   cursor: pointer;
-  transition: transform 400ms ease-in-out;
+  transition: transform 600ms cubic-bezier(0.23, 0.885, 0.32, 1.5);
   box-shadow: 2px 3px 3px #37006a;
   border-radius: .5rem;
 }
@@ -119,10 +119,19 @@ header {
   font-size: 3rem;
   background-color: #fefdfb;
   transform: rotateY(-180deg);
+  transition: background-color 200ms 300ms
 }
 
 .flip-card {
   transform: rotateY(180deg);
+}
+
+.card-back-match {
+  background-color: green;
+}
+
+.card-back-mismatch {
+  background-color: red;
 }
 
 .popup {
